--- a/.htaccess
+++ b/.htaccess
@@ -1,4 +1,7 @@
+Options +FollowSymlinks -Indexes
 RewriteEngine on
+
+DirectoryIndex index.php
 RewriteCond $1 !^(index\.php|resources|robots\.txt)
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
